[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tdam", email = "20456596+tobiasdam@users.noreply.github.com"},
]
dependencies = [
    "celery[arangodb,auth,brotli,msgpack,redis]==5.5.0b1",
    "requests-toolbelt>=1.0.0",
    "rich>=13.5.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
worker = "pdm run celery -A src.drone.worker worker"