[project]
name = ""
version = ""
description = ""
authors = [
    {name = "tdam", email = "20456596+tobiasdam@users.noreply.github.com"},
]
dependencies = [
    "celery[arangodb,auth,brotli,msgpack,redis]==5.5.3",
    "requests-toolbelt>=1.0.0",
    "rich>=14.0.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
worker = "pdm run celery -A src.drone.worker worker"
